--- a/5-22-2015.html
+++ b/5-22-2015.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh" prefix="og: http://ogp.me/ns# fb: https://www.facebook.com/2008/fbml">
 <head>
-    <title>第一篇 - 不悔，就是不悔</title>
+    <title>第二篇 - 不悔，就是不悔</title>
     <!-- Using the latest rendering mode for IE -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta charset="utf-8">
@@ -9,20 +9,22 @@
 
 
 
-<link rel="canonical" href="./first.html">
+<link rel="canonical" href="./5-22-2015.html">
 
         <meta name="author" content="yong" />
-        <meta name="keywords" content="" />
-        <meta name="description" content="第一篇，哈哈" />
+        <meta name="keywords" content="Jerry Yang,silicon valley,internet" />
+        <meta name="description" content="咱的一个blog终于开张了，这下开始正经写了。 1999年木子美刚出道的时候，哥就开始写blog了，跟木子美正好在一个网站。 后来blogcn被木子美搞得当掉了，哥就转战天涯，在天涯转战了十年，天涯blog还被干掉过一次。之后辗转到了blogger，blogger倒是不删帖，但是blogger国内访问不了。所以就没有那么高大上了，还是在github上自己建站比较牛叉。 今天HYSTA去听了杨致远fireplace talk，杨致远也算是硅谷的传奇人物，1995年的时候创立了yahoo！走在了时代前列。google，阿里巴巴，facebook都在他之后。yahoo也是当年流量第一的网站。后来被Google，facebook超过了。yahoo当年投资1bn给阿里巴巴，以至于阿里巴巴上市后，yahoo持有的alibaba股份比yahoo自己的市值还高。 由于Yahoo一系列战略失误，使得yahoo渐渐丢失了市场的领先，搜索引擎干不过google，后来又跟bing合作。卖微软，杨致远不同意，后来杨致远被挤出了董事会，yahoo频繁换ceo，marisa加盟之后，yahoo有了一些起色，但是跟离风头正劲的时候比，还是显得有些后劲不足。 杨致远讲了一些自己做的事情。以及后头可以做的事。 和阿里巴巴Jace Ma接触的事情。杨致远跟马云在长城上见面，现在那张照片还挂在阿里巴巴杭州总部。 2004 经过深思熟虑 投入做platform，以及做了几年中国市场 ..." />
 
         <meta property="og:site_name" content="不悔，就是不悔" />
         <meta property="og:type" content="article"/>
-        <meta property="og:title" content="第一篇"/>
-        <meta property="og:url" content="./first.html"/>
-        <meta property="og:description" content="第一篇，哈哈"/>
+        <meta property="og:title" content="第二篇"/>
+        <meta property="og:url" content="./5-22-2015.html"/>
+        <meta property="og:description" content="咱的一个blog终于开张了，这下开始正经写了。 1999年木子美刚出道的时候，哥就开始写blog了，跟木子美正好在一个网站。 后来blogcn被木子美搞得当掉了，哥就转战天涯，在天涯转战了十年，天涯blog还被干掉过一次。之后辗转到了blogger，blogger倒是不删帖，但是blogger国内访问不了。所以就没有那么高大上了，还是在github上自己建站比较牛叉。 今天HYSTA去听了杨致远fireplace talk，杨致远也算是硅谷的传奇人物，1995年的时候创立了yahoo！走在了时代前列。google，阿里巴巴，facebook都在他之后。yahoo也是当年流量第一的网站。后来被Google，facebook超过了。yahoo当年投资1bn给阿里巴巴，以至于阿里巴巴上市后，yahoo持有的alibaba股份比yahoo自己的市值还高。 由于Yahoo一系列战略失误，使得yahoo渐渐丢失了市场的领先，搜索引擎干不过google，后来又跟bing合作。卖微软，杨致远不同意，后来杨致远被挤出了董事会，yahoo频繁换ceo，marisa加盟之后，yahoo有了一些起色，但是跟离风头正劲的时候比，还是显得有些后劲不足。 杨致远讲了一些自己做的事情。以及后头可以做的事。 和阿里巴巴Jace Ma接触的事情。杨致远跟马云在长城上见面，现在那张照片还挂在阿里巴巴杭州总部。 2004 经过深思熟虑 投入做platform，以及做了几年中国市场 ..."/>
         <meta property="article:published_time" content="2015-05-22" />
             <meta property="article:section" content="new" />
-            <meta property="article:tag" content="" />
+            <meta property="article:tag" content="Jerry Yang" />
+            <meta property="article:tag" content="silicon valley" />
+            <meta property="article:tag" content="internet" />
             <meta property="article:author" content="yong" />
 
 
@@ -78,10 +80,10 @@
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="./first.html"
+                    <a href="./5-22-2015.html"
                        rel="bookmark"
-                       title="Permalink to 第一篇">
-                        第一篇
+                       title="Permalink to 第二篇">
+                        第二篇
                     </a>
                 </h1>
             </header>
@@ -99,11 +101,29 @@
 
 
 <span class="label label-default">Tags</span>
-	<a href="./tag/.html"></a>
+	<a href="./tag/jerry-yang.html">Jerry Yang</a>
+        /
+	<a href="./tag/silicon-valley.html">silicon valley</a>
+        /
+	<a href="./tag/internet.html">internet</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
-                <p>第一篇，哈哈</p>
+                <p>咱的一个blog终于开张了，这下开始正经写了。<br>
+1999年木子美刚出道的时候，哥就开始写blog了，跟木子美正好在一个网站。
+后来blogcn被木子美搞得当掉了，哥就转战天涯，在天涯转战了十年，天涯blog还被干掉过一次。之后辗转到了blogger，blogger倒是不删帖，但是blogger国内访问不了。所以就没有那么高大上了，还是在github上自己建站比较牛叉。<br>
+<br>
+今天HYSTA去听了杨致远fireplace talk，杨致远也算是硅谷的传奇人物，1995年的时候创立了yahoo！走在了时代前列。google，阿里巴巴，facebook都在他之后。yahoo也是当年流量第一的网站。后来被Google，facebook超过了。yahoo当年投资1bn给阿里巴巴，以至于阿里巴巴上市后，yahoo持有的alibaba股份比yahoo自己的市值还高。<br>
+由于Yahoo一系列战略失误，使得yahoo渐渐丢失了市场的领先，搜索引擎干不过google，后来又跟bing合作。卖微软，杨致远不同意，后来杨致远被挤出了董事会，yahoo频繁换ceo，marisa加盟之后，yahoo有了一些起色，但是跟离风头正劲的时候比，还是显得有些后劲不足。<br>
+杨致远讲了一些自己做的事情。以及后头可以做的事。
+和阿里巴巴Jace Ma接触的事情。杨致远跟马云在长城上见面，现在那张照片还挂在阿里巴巴杭州总部。
+2004 经过深思熟虑 投入做platform，以及做了几年中国市场。
+雅虎中国也是yahoo在中国市场的尝试，那时的， 日本 中国政府，跟美国的市场完全不一样.
+投资中国还是美国完全不一样，主要是betting on people，有各种困难。当时yahoo一共就3bn现金，投在阿里巴巴就1个bn。
+<br>
+5前以前，中国的移动互联网还没有形成，今后二十年，热点应该还是在sv，应该是在其他领域比如生物和化学。
+杨致远自己也做invest，cloud和big data现在算热点。</p>
+<p>之后观众提问，有问到关于空气污染和水，杨致远说斯坦福有很多这方面研究，关于filter，mask，以及sensor。但是这不一定能挣钱，但是需要合作合作，不一定适合做startup。</p>
             </div>
             <!-- /.entry-content -->
     <hr/>
@@ -115,8 +135,8 @@
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
             var disqus_shortname = 'ahmao'; // required: replace example with your forum shortname
 
-                    var disqus_identifier = 'first';
-                var disqus_url = './first.html';
+                    var disqus_identifier = '5-22-2015';
+                var disqus_url = './5-22-2015.html';
 
             var disqus_config = function () {
                 this.language = "zh";
