--- a/authors.html
+++ b/authors.html
@@ -67,7 +67,7 @@
     <div class="row">
         <div class="col-sm-9">
     <h1>Authors on 不悔，就是不悔</h1>
-        <li><a href="./author/yong.html">yong</a> (1)</li>
+        <li><a href="./author/yong.html">yong</a> (2)</li>
         </div>
         <div class="col-sm-3" id="sidebar">
             <aside>
@@ -83,6 +83,11 @@
 
             <li class="list-group-item"><h4><i class="fa fa-home fa-lg"></i><span class="icon-label">Recent Posts</span></h4>
                 <ul class="list-group" id="recentposts">
+                    <li class="list-group-item">
+                        <a href="./5-22-2015.html">
+                            第二篇
+                        </a>
+                    </li>
                     <li class="list-group-item">
                         <a href="./first.html">
                             第一篇
@@ -104,8 +109,23 @@
             <li class="list-group-item"><a href="./"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                 <ul class="list-group " id="tags">
                     <li class="list-group-item tag-4">
+                        <a href="./tag/internet.html">
+                            internet
+                        </a>
+                    </li>
+                    <li class="list-group-item tag-4">
+                        <a href="./tag/jerry-yang.html">
+                            Jerry Yang
+                        </a>
+                    </li>
+                    <li class="list-group-item tag-4">
                         <a href="./tag/.html">
                             
+                        </a>
+                    </li>
+                    <li class="list-group-item tag-4">
+                        <a href="./tag/silicon-valley.html">
+                            silicon valley
                         </a>
                     </li>
                 </ul>
